squashin' :bug:

--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -1,9 +1,6 @@
 /* This is the main CSS stylesheet that will get loaded on every page */
 
 /* CSS to overwrite any bootstrap */
-.bs-example {
-    margin-bottom: 20px;
-}
 .center {
     margin: auto;
     width: 50%;
@@ -58,6 +55,7 @@ input[type='checkbox'] {
   display: none;
   width: 100%;
   height: 100%;
+  overflow: auto;
   position: absolute;
   background-color: #5552;
   pointer-events: none;
